@@ -8,7 +8,8 @@
     genD(func, x, method="Richardson",
                    method.args=list(), ...)
     \method{genD}{default}(func, x, method="Richardson",
-      method.args=list(eps=1e-4, d=0.1, zero.tol=100*.Machine$double.eps, r=4, v=2), ...)
+      method.args=list(eps=1e-4, d=0.0001, 
+      zero.tol=sqrt(.Machine$double.eps/7e-7), r=4, v=2), ...)
 }
 \arguments{
     \item{func}{a function for which the first (vector) argument 
